--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <img src="IMG_0523.jpeg" alt="Sofia Canihuante" class="profile-pic">
         <p>Hello! My name is Sofia Canihuante, a current Anthropology and Data Science Senior at the University of Texas at Austin.</p>
         <p>I have experience with Java, JavaScript, R, RStudio, and Python. I am passionate about solving technical problems with an interdisciplinary approach.</p>
-        <p>I'm interested in program management, project managment trust and safety, data analyst, and security-related roles.</p>
+        <p>I'm interested in program management, project managment, trust and safety, data analyst, and security-related roles.</p>
     </section>
 
     <section id="projects">
