--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <img src="IMG_0523.jpeg" alt="Sofia Canihuante">
             <p>Hello! My name is Sofia Canihuante, an Anthropology and Data Science Senior at UT Austin.</p>
             <p>I have experience with Java, JavaScript, R, RStudio, and Python. I am passionate about solving technical problems with an interdisciplinary approach.</p>
-            <p>I'm interested in program management, project management, product management  trust and safety, data analyst, and security-related roles.</p>
+            <p>I'm interested in program management, project management, product management, trust and safety, data analysis, and security-related roles.</p>
         </div>
     </section>
 
@@ -34,21 +34,31 @@
         <div class="container">
             <h1>Projects</h1>
             <div class="projects-grid">
+
                 <div class="project-card">
                     <h3>Chihuahua Adoption in Texas</h3>
-                    <p>Elements of Statistics course project analyzing adoption rates using GLM.</p>
+                    <p><strong>Elements of Statistics SDS32OE:</strong> Analyzing adoption rates using GLM.</p>
+                    <ul>
+                        <li>Performed data wrangling and mining to clean and preprocess raw data.</li>
+                        <li>Applied descriptive statistics to analyze key trends and patterns.</li>
+                        <li>Conducted regression analysis to examine relationships between variables.</li>
+                        <li>Derived insights to support data-driven decision-making.</li>
+                    </ul>
                     <a href="SDS320E Poster.pdf" target="_blank" class="btn">View Project</a>
                 </div>
+
                 <div class="project-card">
                     <h3>Social & Biological Networks</h3>
                     <p>Analysis of bipartite network data.</p>
                     <a href="Project2.pdf" target="_blank" class="btn">View Project</a>
                 </div>
+
                 <div class="project-card">
                     <h3>[Project Name]</h3>
                     <p>Brief description of the project and technologies used.</p>
                     <a href="Project3.pdf" target="_blank" class="btn">View Project</a>
                 </div>
+
             </div>
         </div>
     </section>
@@ -64,6 +74,7 @@
 
 </body>
 </html>
+
 
 
 
