--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
 
                 <div class="project-card">
                     <h3>Chihuahua Adoption in Texas</h3>
-                    <p><strong>Elements of Statistics SDS32OE:</strong> Analyzing adoption rates using GLM.</p>
+                    <p><strong>Elements of Statistics SDS32OE</strong></p>
                     <ul>
                         <li>Performed data wrangling and mining to clean and preprocess raw data.</li>
                         <li>Applied descriptive statistics to analyze key trends and patterns.</li>
                         <li>Conducted regression analysis to examine relationships between variables.</li>
                         <li>Derived insights to support data-driven decision-making.</li>
+                        <li>Programmed in R and coded using RStudio</li>
                     </ul>
                     <a href="SDS320E Poster.pdf" target="_blank" class="btn">View Project</a>
                 </div>
