--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <li>Applied descriptive statistics to analyze key trends and patterns.</li>
                         <li>Conducted regression analysis to examine relationships between variables.</li>
                         <li>Derived insights to support data-driven decision-making.</li>
-                        <li>Programmed in R and coded using RStudio</li>
+                        <li>Programmed in R and coded using RStudio.</li>
                     </ul>
                     <a href="SDS320E Poster.pdf" target="_blank" class="btn">View Project</a>
                 </div>
