--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <ul>
             <li><a href="#about">About Me</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="#resume">Resume</a></li>
         </ul>
     </nav>
 
@@ -50,8 +49,14 @@
 
                 <div class="project-card">
                     <h3>Social & Biological Networks</h3>
-                    <p>Analysis of bipartite network data.</p>
-                    <a href="Project2.pdf" target="_blank" class="btn">View Project</a>
+                    <p><strong>ANT 348K</strong></p>
+                    <ul>
+                        <li>Analyzed bipartite network data and its structure.</li>
+                        <li>Examined social and biological networks for patterns and connections.</li>
+                        <li>Utilized network analysis techniques to interpret data.</li>
+                        <li>Programmed and visualized network data in R.</li>
+                    </ul>
+                    <a href="ANT 348K project .pdf" target="_blank" class="btn">View Project</a>
                 </div>
 
                 <div class="project-card">
@@ -64,17 +69,10 @@
         </div>
     </section>
 
-    <!-- Resume Section -->
-    <section id="resume" class="section">
-        <div class="container">
-            <h1>My Resume</h1>
-            <iframe src="Resume.pdf" width="100%" height="500px"></iframe>
-            <a href="Resume.pdf" download class="btn">Download Resume</a>
-        </div>
-    </section>
-
 </body>
 </html>
+
+
 
 
 
