--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 </div>
 
                 <div class="project-card">
-                    <h3>Social & Biological Networks</h3>
-                    <p><strong>ANT 348K</strong></p>
+                    <h3>Social Network Analyses of Marvel Comic Book as well as MCU Characters based on Asgardian type.</h3>
+                    <p><strong>Social & Biological Networks ANT 348K</strong></p>
                     <ul>
                         <li>Analyzed bipartite network data and its structure.</li>
                         <li>Examined social and biological networks for patterns and connections.</li>
@@ -60,9 +60,15 @@
                 </div>
 
                 <div class="project-card">
-                    <h3>[Project Name]</h3>
-                    <p>Brief description of the project and technologies used.</p>
-                    <a href="Project3.pdf" target="_blank" class="btn">View Project</a>
+                    <h3>Simulation of a Simple Market</h3>
+                    <p><strong>Elements of Computers and Programming CS303E</strong></p>
+                    <ul>
+                        <li>placeholder</li>
+                        <li>placeholder</li>
+                        <li>placeholder</li>
+                        <li>Python</li>
+                    </ul>
+                    <a href="Project3.py" target="_blank" class="btn">View Project</a>
                 </div>
 
             </div>
