--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                     <h3>Social Network Analyses of Marvel Comic Book as well as MCU Characters based on Asgardian type.</h3>
                     <p><strong>Social & Biological Networks ANT 348K</strong></p>
                     <ul>
-                        <li>Analyzed bipartite network data and its structure.</li>
-                        <li>Examined social and biological networks for patterns and connections.</li>
-                        <li>Utilized network analysis techniques to interpret data.</li>
-                        <li>Programmed and visualized network data in R.</li>
+                        <li>Cleaned and transformed data for analysis, leveraging R for data manipulation and visualization with igraph.</li>
+                        <li>Analyzed networks using centrality metrics and statistical methods to interpret data and draw insights.</li>
+                        <li>Created clear visualizations and identified key communities within networks to uncover patterns.</li>
+                        <li>Formulated research questions and provided actionable insights based on network analysis.</li>
                     </ul>
                     <a href="ANT 348K project .pdf" target="_blank" class="btn">View Project</a>
                 </div>
