--- a/index.html
+++ b/index.html
@@ -63,10 +63,11 @@
                     <h3>Simulation of a Simple Market</h3>
                     <p><strong>Elements of Computers and Programming CS303E</strong></p>
                     <ul>
-                        <li>placeholder</li>
-                        <li>placeholder</li>
-                        <li>placeholder</li>
-                        <li>Python</li>
+                        <li>Applied object-oriented programming (OOP) principles to design and implement classes and methods, enhancing code organization and scalability.</li>
+                        <li>Utilized file handling techniques to generate, write, and log simulated data, demonstrating expertise in data creation and storage management.</li>
+                        <li>Developed and optimized algorithms using loops and conditionals to simulate events and control program flow, showcasing strong problem-solving skills.</li>
+                        <li>Demonstrated proficiency in managing and manipulating data structures such as lists, and applied indexing and slicing for efficient data handling.</li>
+                        <li>Leveraged Python for the entire project, utilizing its versatile libraries and functionality to build a seamless and efficient simulation.</li>
                     </ul>
                     <a href="Project3.py" target="_blank" class="btn">View Project</a>
                 </div>
