--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
         <div class="container">
             <h1>About Me</h1>
             <img src="IMG_0523.jpeg" alt="Sofia Canihuante">
-            <p>Hello! My name is Sofia Canihuante, an Anthropology and Data Science Senior at UT Austin.</p>
+            <p>Hello! My name is Sofia Canihuante, an Anthropology and Data Science senior at UT Austin.</p>
             <p>I have experience with Java, JavaScript, R, RStudio, and Python. I am passionate about solving technical problems with an interdisciplinary approach.</p>
             <p>I'm interested in program management, project management, product management, trust and safety, data analysis, and security-related roles.</p>
+            <p>As a small business owner and club officer, I’ve gained leadership, strategic planning, and communication skills, along with experience in problem-solving and decision-making. In my free time, I enjoy visiting different resturants and exploring new cusines. I also have a passion for reading and exploring new places in my free time, with my curiosty driving me to constantly learn and adapt as I expand my horizons.</p>
         </div>
     </section>
 
