--- a/index.html
+++ b/index.html
@@ -72,6 +72,21 @@
                     </ul>
                     <a href="Project3.py" target="_blank" class="btn">View Project</a>
                 </div>
+                
+                <div class="project-card">
+                    <h3>Data Visualization Projects</h3>
+                    <p><strong>SDS 366 Data Visualization</strong></p>
+                    <ul>
+                        <li>Cleaned and filtered datasets from TidyTuesday using <code>dplyr</code> for subsetting, transformation, and categorical/numerical data analysis.</li>
+                        <li>Created layered and compound plots using <code>ggplot2</code>, including violin, sina, bar, box, and scatter plots with custom themes and labels.</li>
+                        <li>Applied statistical modeling, including multiple linear regression, to uncover patterns and predict outcomes.</li>
+                        <li>Utilized advanced visualization tools like <code>patchwork</code>, <code>ggrepel</code>, and <code>ggforce</code> to enhance storytelling and insight delivery.</li>
+                        <li>Used faceting and color coding to highlight variable relationships across dimensions such as gender, brand, country, and scent type.</li>
+                    </ul>
+                    <a href="Project_1.pdf" target="_blank" class="btn">View Project 1 (Triathlon)</a><br>
+                    <a href="Project_2.pdf" target="_blank" class="btn">View Project 2 (Himalayan Expeditions)</a><br>
+                    <a href="Project_3.pdf.zip" target="_blank" class="btn">Download Project 3 (Perfume Ratings)</a>
+                </div>
 
             </div>
         </div>
