--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
                 <div class="project-card">
                     <h3>Chihuahua Adoption in Texas</h3>
-                    <p><strong>Elements of Statistics SDS32OE</strong></p>
+                    <p><strong>Elements of Statistics SDS 32OE</strong></p>
                     <ul>
                         <li>Performed data wrangling and mining to clean and preprocess raw data.</li>
                         <li>Applied descriptive statistics to analyze key trends and patterns.</li>
@@ -62,7 +62,7 @@
 
                 <div class="project-card">
                     <h3>Simulation of a Simple Market</h3>
-                    <p><strong>Elements of Computers and Programming CS303E</strong></p>
+                    <p><strong>Elements of Computers and Programming CS 303E</strong></p>
                     <ul>
                         <li>Applied object-oriented programming (OOP) principles to design and implement classes and methods, enhancing code organization and scalability.</li>
                         <li>Utilized file handling techniques to generate, write, and log simulated data, demonstrating expertise in data creation and storage management.</li>
@@ -75,7 +75,7 @@
                 
                 <div class="project-card">
                     <h3>Data Visualization Projects</h3>
-                    <p><strong>SDS 366 Data Visualization</strong></p>
+                    <p><strong>Data Visualization SDS 366</strong></p>
                     <ul>
                         <li>Cleaned and filtered datasets from TidyTuesday using <code>dplyr</code> for subsetting, transformation, and categorical/numerical data analysis.</li>
                         <li>Created layered and compound plots using <code>ggplot2</code>, including violin, sina, bar, box, and scatter plots with custom themes and labels.</li>
