--- a/index.html
+++ b/index.html
@@ -86,6 +86,19 @@
                     <a href="Project_1.pdf" target="_blank" class="btn">View Project 1 (Triathlon)</a><br>
                     <a href="Project_2.pdf" target="_blank" class="btn">View Project 2 (Himalayan Expeditions)</a><br>
                     <a href="Project_3.pdf.zip" target="_blank" class="btn">Download Project 3 (Perfume Ratings)</a>
+                </div>                
+                
+                <div class="project-card">
+                    <h3>A Data Analysis of Austin's Construction Permits</h3>
+                    <p><strong> Elements of Data Science SDS 322E</strong></p>
+                    <ul>
+                        <li>Filtered and transformed a raw dataset of over 50,000 construction permits down to 4,842 clean observations using R functions such as select(), filter(), !is.na(), and conditional logic.</li>
+                        <li>Built and evaluated multiple linear regression models to assess relationships between permit type, unit cost, and job valuation.</li>
+                        <li>Used five-fold cross-validation to assess model generalizability; interpreted R² and RMSE to evaluate predictive strength across different data subsets.</li>
+                        <li>Used summary statistics and visualizations (boxplots, scatterplots, bar plots) to identify trends and outliers.</li>
+                        <li>Coordinated with a teammate using structured task delegation, joint interpretation of findings, and refinement of outputs.</li>
+                    </ul>
+                    <a href="A Data Analysis of Austin's Construction Permits.pptx.pdf" target="_blank" class="btn">View Project</a>
                 </div>
 
             </div>
