--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
             <h1>About Me</h1>
             <img src="IMG_0523.jpeg" alt="Sofia Canihuante">
             <p>Hello! My name is Sofia Canihuante, an Anthropology and Data Science senior at UT Austin.</p>
-            <p>I have experience with Java, JavaScript, R, RStudio, and Python. I am passionate about solving technical problems with an interdisciplinary approach.</p>
-            <p>I'm interested in program management, project management, product management, trust and safety, data analysis, and security-related roles.</p>
+            <p>I have experience with Java, JavaScript, R, RStudio, and Python. I also have experience with a myriad of machine learning techniques used on real world data to make actionable insight. I am passionate about solving technical problems with an interdisciplinary approach.</p>
+            <p>I'm interested in program management, project management, product management, trust and safety, data analytics, and security-related roles.</p>
+            <p>I am also interested in graduate school programs that include social and behavioral data analytics research.</p>
             <p>As a small business owner and club officer, I’ve gained leadership, strategic planning, and communication skills, along with experience in problem-solving and decision-making. In my free time, I enjoy visiting different resturants and exploring new cusines. I also have a passion for reading and exploring new places in my free time, with my curiosty driving me to constantly learn and adapt as I expand my horizons.</p>
         </div>
     </section>
@@ -99,6 +100,22 @@
                         <li>Coordinated with a teammate using structured task delegation, joint interpretation of findings, and refinement of outputs.</li>
                     </ul>
                     <a href="A Data Analysis of Austin's Construction Permits.pptx.pdf" target="_blank" class="btn">View Project</a>
+                </div>
+
+                 <div class="project-card">
+                    <h3>AIDS Clinical Trial Study</h3>
+                    <p><strong> Elements of Statistical Machine Learning SDS 326E</strong></p>
+                    <ul>
+                        <li>Corroborate an important study in the history of HIV research to analyze various treatments and test their effectiveness to improve lives of those with HIV using RStudio.</li>
+                        <li>Performed Random Forest Model with Confusion Matrix to determine if patients experience a slower or faster progression depending on baseline variables or different factors.</li>
+                        <li>Performed non-linear models that were capable of capturing the complex relationships between variables that effected patient progression of HIV, such as the Generalized Additive Model (GAM) and Random Forest Regression.</li>
+                        <li>Performed LASSO logistic regression to identify a subset of the most important predictors for patient outcome.</li>
+                        <li>Performed exploratory classification tree on all baseline data to identify strong predictive splits of patient outcome.</li>
+                        <li>Performed Principal Components of Patient Outcome to identify subgroups for treatment.</li>
+                        <li>Performed exploratory data analysis(boxplots and histograms) to visualize predictors.</li>
+                        <li>Coordinated with a teammate using structured task delegation, joint interpretation of findings, and refinement of outputs.</li>
+                    </ul>
+                    <a href="SDS 326E Project Presentation.pptx" target="_blank" class="btn">View Project</a>
                 </div>
 
             </div>
