--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <li>Performed exploratory classification tree on all baseline data to identify strong predictive splits of patient outcome.</li>
                         <li>Performed Principal Components of Patient Outcome to identify subgroups for treatment.</li>
                         <li>Performed exploratory data analysis(boxplots and histograms) to visualize predictors.</li>
-                        <li>Coordinated with a teammate using structured task delegation, joint interpretation of findings, and refinement of outputs.</li>
+                        <li>Coordinated with teammates using structured task delegation, joint interpretation of findings, and refinement of outputs.</li>
                     </ul>
                     <a href="SDS 326E Project Presentation.pptx" target="_blank" class="btn">View Project</a>
                 </div>
